# azimuth

./: .app_env  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  azimuth.code-workspace  docker-compose-gpu.yml  docker-compose.yml  index.html  openapi.py  pyproject.toml  runner.py  sitemap.xml  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dev.md  enhancement.md  frontend.md  research.md
.github/workflows/: docker_cd.yml  docker_cd_cpu.yml  docker_cd_gpu.yml  docs_cd.yml  pythonci.yml  webapp_ci.yml
about-us/: index.html
azimuth/: README.md  __init__.py  app.py  app_loader.py  config.py  dataset_split_manager.py  startup.py  task_manager.py
azimuth/modules/: README.md  __init__.py  model_contract_task_mapping.py  task_execution.py  task_mapping.py
azimuth/plots/: dataset_warnings.py  ece.py  sankey_plot.py
azimuth/routers/: README.md  app.py  class_overlap.py  config.py  custom_utterances.py  dataset_warnings.py  export.py  top_words.py  utterances.py
azimuth/types/: __init__.py  app.py  class_overlap.py  dataset_warnings.py  model_performance.py  outcomes.py  perturbation_testing.py  pipeline_comparison.py  similarity_analysis.py  spectral_clustering.py  tag.py  task.py  utterance.py  validation.py  word_analysis.py
azimuth/utils/: cluster.py  conversion.py  dataset_operations.py  exception_handlers.py  exclude_fields_from_cache.py  exclude_fields_with_extra.py  filtering.py  logs.py  object_loader.py  openapi.py  plots.py  project.py  pydantic_utils.py  routers.py  string_processing.py  utterance.py  validation.py
azimuth_shr/: loading_resources.py
azimuth_shr/data/: CLINC150.py
azimuth_shr/models/: file_based.py
development/: index.html
development/dev-practices/: index.html
development/launching/: index.html
development/setup/: index.html
docs/: Dockerfile.docs  Makefile  README.md  mkdocs.yml
docs/docs/: about-us.md  index.md
docs/includes/: abbreviations.md
getting-started/: index.html
getting-started/a-install/: index.html
getting-started/b-basics/: index.html
getting-started/c-run/: index.html
getting-started/changelog/: index.html
key-concepts/: index.html
key-concepts/behavioral-testing/: index.html
key-concepts/outcomes/: index.html
key-concepts/proposed-actions/: index.html
key-concepts/saliency/: index.html
key-concepts/similarity/: index.html
key-concepts/smart-tags/: index.html
key-concepts/syntax-analysis/: index.html
key-concepts/uncertainty/: index.html
main/: 404.html  index.html  sitemap.xml
main/about-us/: index.html
main/development/: index.html
main/getting-started/: index.html
main/key-concepts/: index.html
main/reference/: index.html
main/search/: search_index.json
main/user-guide/: index.html
makefiles/: Makefile.demo  Makefile.docs  Makefile.local  Makefile.security  Makefile.test
reference/: index.html
reference/configuration/: index.html
reference/custom-objects/: index.html
test_doc2/: index.html
test_doc2/search/: search_index.json
test_doc2/user-guide/: index.html
tests/: .coveragerc  README.md  conftest.py  profiling_debugging.py  test_config.py  test_dataset_manager.py  test_documentation.py  test_load_config.py  test_loading_resources.py  test_performance.py  test_startup.py  test_task_manager.py  utils.py
tests/fixtures/: sample_CLINC150.json
tests/test_experiments/: test_top_words_tagging.py
tests/test_modules/: conftest.py  test_artifact_manager.py  test_caching.py  test_module.py  test_task_execution.py
tests/test_routers/: conftest.py  test_app.py  test_class_analysis.py  test_config.py  test_custom_utterances.py  test_dataset_warnings.py  test_export.py  test_spectral_clustering.py  test_tags.py  test_top_words.py  test_utils.py  test_utterances.py
tests/test_utils/: test_api_dependency_injection.py  test_array_type.py  test_dataset_filtering.py  test_exclude_from_cache.py  test_task_running.py
user-guide/: index.html
user-guide/behavioral-testing-summary/: index.html
user-guide/dataset-warnings/: index.html
user-guide/exploration-space/: index.html
user-guide/post-processing-analysis/: index.html
user-guide/settings/: index.html
v2/: 404.html  sitemap.xml
v2.1/: 404.html  index.html  sitemap.xml
v2.1.1/: sitemap.xml
v2.1.1/about-us/: index.html
v2.1.1/search/: search_index.json
v2.1/about-us/: index.html
v2.1/development/: index.html
v2.1/getting-started/: index.html
v2.1/key-concepts/: index.html
v2.1/reference/: index.html
v2.1/user-guide/: index.html
v2.2/: 404.html  index.html  sitemap.xml
v2.2/about-us/: index.html
v2.2/development/: index.html
v2.2/getting-started/: index.html
v2.2/key-concepts/: index.html
v2.2/reference/: index.html
v2.2/search/: search_index.json
v2.2/user-guide/: index.html
v2.3/: index.html
v2.3/key-concepts/: index.html
v2.3/reference/: index.html
v2.4/: 404.html  index.html  sitemap.xml
v2.4/about-us/: index.html
v2.4/development/: index.html
v2.4/getting-started/: index.html
v2.4/key-concepts/: index.html
v2.4/reference/: index.html
v2.4/search/: search_index.json
v2.4/user-guide/: index.html
v2.5/: 404.html  index.html
v2.5/about-us/: index.html
v2.5/development/: index.html
v2.5/getting-started/: index.html
v2.5/key-concepts/: index.html
v2.5/reference/: index.html
v2.5/search/: search_index.json
v2.6/: 404.html  index.html
v2.8/: 404.html  index.html
webapp/: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config-overrides.js  package-lock.json  package.json  server.js  tsconfig.json
(+698 files in other folders)
