[tool.poetry]
name = "azimuth"
version = "2.1.1"
description = "Azimuth provides an unified error analysis experience to data scientists."
readme = "README.md"
authors = ["Butter-ball team <xaicaps@servicenow.com>"]
homepage = "https://github.com/ServiceNow/azimuth"
repository = "https://github.com/ServiceNow/azimuth"

packages = [{ include = "azimuth/" },]


[tool.poetry.dependencies]
python = ">=3.8,<3.10"

# Scientific
pandas = ">=1.0.5,<2,!=1.1.0"
baal = "1.5.2"
scikit-learn = "^1.0.1"
faiss-cpu = "=1.6.5"
tensorflow = "~2.8.0"
tensorflow-text = "~2.8.0"
### tensorflow-estimator: poetry issues when versions like "x.y.0rc1" are released
tensorflow-estimator = "~2.8.0"
onnx = "^1.9.0"
onnxruntime-extensions = "^0.3.1"
onnxruntime = "^1.8.1"
scipy = "^1.6.3"

####
# This relates to the two unused repositories. Here we make extra certain that the PyPI version is used.
# torch is locked to 1.8.0 because 1.8.1 fails with
# ...
# .venv/lib/python3.8/site-packages/torch/__init__.py:196: in <module>
#     from torch._C import *
# E   ImportError: libopenblas.so.0: cannot open shared object file: No such file or directory

torch = { version = "1.9.0", source = "PyPI" }

# NLP libraries
transformers = "4.13.0"
sentence-transformers = "^1.2.1"
spacy = "^3.1.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz#egg=en_core_web_sm"}
nlpaug = "^1.1.4"
datasets = "~1.16.0"

# Misc
filelock = "^3.0.12"
structlog = "21.1"  # locked because 21.2 generates an error.
tqdm = "^4.49"
plotly = "^5.3.1"
retrying = "^1.3.3"

# FastAPI requirements
fastapi = "^0.65.2"
types-simplejson = "^3.17.0"
types-filelock = "^0.1.5"
types-orjson = "^3.6.0"
orjson = "^3.6.3"
fastapi-profiler = "^1.0.0"
pydantic = "^1.3"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"
### End of FastAPI requirements ###

## Dask dependencies
dask = "^2021.10.0"
distributed = "^2021.10.0"

####

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
pytest-env = "^0.6.2"
flake8 = ">=3.8"
flake8-black = "0.2.4"
jupyterlab = "^3.0.5"
jupyter = "^1.0.0"
lab = "^6.2"
ipywidgets = ">=7.6"
notebook = "^6.4.12"
black = ">=20.8b1"
mypy = "^0.910"
bandit = "^1.7.0"
matplotlib = "^3.4.1"
umap-learn = "^0.5.1"
seaborn = "^0.11.1"
hdbscan = "^0.8.27"
pre-commit = "^2.15.0"
isort = "^5.9.3"

# Documentation
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = ["DASK_DISTRIBUTED__WORKER__DAEMON=False"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip = ["__init__.py"]
filter_files = true

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
