[tool.poetry]
name = "azimuth"
version = "2.5.3"
description = "Azimuth provides a unified error analysis experience to data scientists."
readme = "README.md"
authors = ["Azimuth team <azimuth-team@servicenow.com>"]
homepage = "https://servicenow.github.io/azimuth"
repository = "https://github.com/ServiceNow/azimuth"

packages = [{ include = "azimuth/" },]


[tool.poetry.dependencies]
python = ">=3.8,<3.10"

# Scientific
pandas = ">=1.0.5,<2,!=1.1.0"
baal = "1.5.2"
scikit-learn = "^1.0.1"
faiss-cpu = "=1.6.5"
tensorflow = "2.9.2"
tensorflow-text = "2.9.0"
tensorflow-estimator = "2.9.0"
onnx = "^1.12.0"
onnxruntime-extensions = "0.3.1"
onnxruntime = { version = "1.12.1", optional = true }
onnxruntime-gpu = { version = "1.12.1", optional = true }
scipy = "^1.6.3"
spectral-metric = "0.6.1"
torch = { version = "1.13.1", source = "PyPI" }

# NLP libraries
transformers = "4.16.2"
sentence-transformers = "2.1.0"
spacy = "3.1.5"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz#egg=en_core_web_sm"}
fr_core_news_md = {url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.1.0/fr_core_news_md-3.1.0.tar.gz#egg=fr_core_news_md"}
nlpaug = "1.1.10"
datasets = "2.1.0"

# Misc
filelock = "^3.0.12"
structlog = "21.1"  # locked because 21.2 generates an error.
tqdm = "4.63.0"
plotly = "^5.3.1"
retrying = "^1.3.3"
jsonlines = "^3.1.0"

# FastAPI requirements
fastapi = "0.65.3"
orjson = "3.6.3"
pydantic = "^1.3"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"

# Dask dependencies
dask = "2021.12.0"
distributed = "2021.12.0"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
pytest-cov = "2.11.1"
pytest-env = "^0.6.2"
flake8 = ">=3.8"
flake8-black = "0.2.4"
jupyterlab = "^3.0.5"
ipywidgets = ">=7.6"
black = ">=20.8b1"
mypy = "^0.910"
bandit = "^1.7.0"
matplotlib = "^3.4.1"
umap-learn = "^0.5.1"
seaborn = "0.11.2"
hdbscan = "^0.8.27"
pre-commit = "^2.15.0"
isort = "^5.9.3"
types-simplejson = "^3.17.0"
types-filelock = "^0.1.5"
types-orjson = "^3.6.0"
pyinstrument = "^4.3.0"

# Documentation
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = ["DASK_DISTRIBUTED__WORKER__DAEMON=False"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip = ["__init__.py"]
filter_files = true

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.8
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
